fixed paragraph breaks on algorithms page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,6 +11,12 @@
 .icon-button:hover{
     color:#666666;
 }
+
+pre {
+    padding: 1rem;
+    background-color: #eeeeee;
+    border-radius: 1rem;
+}
 /* #newAlgorithmContainer {
     margin: 3rem;
 } */
